# sim-flow

./: 01-phase-orchestrator-core.md  02-phase-project-templates.md  03-phase-dmf-implementation.md  04-phase-experiment-tracking.md  06-phase-dsf-implementation.md  07-phase-polish-and-deferred.md  08-phase-vscode-extension.md  09-phase-orchestrator-driven-sessions.md  10-phase-multi-model-adaptation-and-runtime-profiles.md  Cargo.toml  README.md  build.rs  plan.md
.github/ci-image/: Dockerfile
.github/workflows/: build-ci-image.yml  ci.yml  release.yml
docs/: api-cost-management.md  embedder.md
docs/architecture/: 01-spec-ingest-pipeline.md  02-spec-md-schema.md  03-lancedb-index-schema.md  04-agent-tools.md  05-rig-integration.md  06-dmf-flow-integration.md  07-spec-format-discovery.md  architecture-format.md  architecture.md
docs/audit/: dmf-prompt-critique-2026-05-16.md
docs/brainstorming/: chat-panel-bug-audit-2026-05-16.md  context-management-2026-05-16.md  context-management-phase-2-reassessment-2026-05-16.md  dmf-llm-critique-rig-lancedb-2026-05-17.md  finetune-corpus-export.md  lancedb-rig-incorporation-plan.md  model-robustness-study.md  model-robustness-vllm-anomalies.md  native-tool-calls-migration.md  orchestrator-bug-audit-2026-05-16.md  parallel-llm-execution-bug-review.md  parallel-llm-execution.md  rust-analyzer-lsp-discovery.md  spec-format-discovery.md  spec-ingest-figure-extraction.md  spec-md-restructure.md
docs/flow/: 01-workflows.md  02-direct-modeling-flow.md  03-design-study-flow.md  04-experiment-tracking.md  05-templates.md  06-vscode-extension.md  07-session-protocol.md  08-orchestrator-tools.md  09-multi-model-adaptation.md  cli-json.md  session-protocol.schema.json
docs/plan/: 01-phase-schema-and-parser.md  02-phase-spec-ingest-pipeline.md  03-phase-embedder.md  04-phase-lancedb-index.md  05-phase-agent-tools.md  06-phase-dmf-dm0.md  08-phase-migration-and-validation.md  09-phase-format-discovery.md  plan-format.md  plan.md
experiments/term-spike/: Cargo.toml  README.md
experiments/term-spike/demo-alacritty/: Cargo.toml
experiments/term-spike/demo-alacritty/src/: main.rs
experiments/term-spike/demo-rio/: Cargo.toml
experiments/term-spike/demo-rio/src/: main.rs
experiments/term-spike/demo-wezterm/: Cargo.toml
experiments/term-spike/demo-wezterm/src/: main.rs
experiments/term-spike/term-core/: Cargo.toml
experiments/term-spike/term-core/src/: lib.rs
extensions/sim-flow-vscode/: .gitignore  .vscodeignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
prompts/: dm0-specification-critique.md  dm0-specification.md  dm1-modeling-setup-critique.md  dm1-modeling-setup.md  dm2a-decomposition-critique.md  dm2a-decomposition.md  dm2b-pipeline-mapping-critique.md  dm2b-pipeline-mapping.md  dm2c-model-impl-plan-critique.md  dm2c-model-impl-plan.md  dm2c-model-implementation-critique.md  dm2c-model-implementation.md  dm2cd-impl-plan-detail-critique.md  dm2cd-impl-plan-detail.md  dm2d-model-implementation-critique.md  dm2d-model-implementation.md  dm3a-test-plan-critique.md  dm3a-test-plan.md  dm3ad-test-plan-detail-critique.md  dm3ad-test-plan-detail.md  dm3b-testbench-impl-critique.md  dm3b-testbench-impl.md  dm3c-test-execution-critique.md  dm3c-test-execution.md  dm4a-performance-plan-critique.md  dm4a-performance-plan.md  dm4ad-performance-plan-detail-critique.md  dm4ad-performance-plan-detail.md  dm4b-performance-analysis-critique.md  dm4b-performance-analysis.md  generate-verilog.md  smoke-work-critique.md  smoke-work.md  sv0-plan-critique.md  sv0-plan.md  sv0d-plan-detail-critique.md  sv0d-plan-detail.md  sv1-rtl-critique.md  sv1-rtl.md  sv2-uvm-critique.md  (+3 more)
prompts/_conventions/: auto-mode-test-loop.md  auto-mode.md  fenced-blocks.md  manual-mode.md  native-tools.md  no-emojis.md  no-preamble.md  orchestrator-native-tools.md
prompts/_templates/: coding-requirements-checks.md  coding-requirements.md  critique-json-schema.md  critique-kinds.md  critique-output-block.md  order-jumping-deferring.md  output-intro-fenced.md  output-intro-native.md  pre-stop-hygiene.md  third-party-reviewer.md
scripts/: checks.sh  coverage.sh  fetch-pdfium.mjs  install-vscode-extension.sh  investigate-work-stall.py  publish-coverage.sh  run-robustness-study.sh
src/: cli.rs  commands.rs  install.rs  lib.rs  main.rs
src/__internal/: block_diagram.rs  bug_log.rs  client.rs  config.rs  critique.rs  db_charts.rs  db_reports.rs  documents.rs  error.rs  gate.rs  (+15 more)
templates/: README.md
templates/model-project/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cargo.toml.tmpl  cargo-generate.toml  template.toml
templates/model-project/.claude/: settings.json
templates/model-project/.github/: copilot-instructions.md
templates/model-project/.sim-flow/: config.toml  state.toml
templates/model-project/docs/: spec.md.tmpl  targets.md.tmpl  testbench.md.tmpl
templates/model-project/docs/analysis/: data-movement.md.tmpl  decomposition.md.tmpl  pipeline-mapping.md.tmpl
templates/model-project/docs/impl-plan/: plan-management.md
templates/model-project/docs/perf-plan/: perf-milestone.md.tmpl  perf-plan.md.tmpl
templates/model-project/docs/plan/: perf-plan.md.tmpl  plan-management.md  test-plan.md.tmpl
templates/model-project/docs/test-plan/: coverage.md.tmpl  tb-milestone.md.tmpl  test-milestone.md.tmpl  test-plan.md.tmpl
templates/model-project/src/: lib.rs  main.rs  sim.rs
templates/model-project/src/model/: mod.rs  top.rs
templates/model-project/tests/: elaboration.rs
tests/: anomaly_repro.rs  ask_user_integration.rs  cli_json.rs  dispatch_ask_user_suspend.rs  dm0_integration.rs  dm_gates.rs  e2e_mocked.rs  embedder_live.rs  format_json_fixture.rs  ingest_with_format.rs  lance_index_integration.rs  lsp_recovery.rs  new_project.rs  prompt_repro_live.rs  retrieval_integration.rs  session.rs  session_auto.rs  session_manual.rs  session_manual_caps.rs  session_terminal.rs  session_work.rs  smoke.rs  spec_ingest_integration.rs  spec_md_extensions.rs  spec_md_round_trip.rs  tracking.rs
(+412 files in other folders)
