[package]
name = "sim-flow"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "sim-flow"
path = "src/main.rs"

[dependencies]
block-diagram = { path = "../../tools/block-diagram" }
clap = { version = "4.5", features = ["derive"] }
# Used by the `tracking::diff` module to load `.obsv` stats and run
# the framework's existing `compare_metric_samples` machinery over
# two run-ids from experiments.db.
foundation-framework = { path = "../../crates/framework" }
directories = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
lopdf = "0.32"
pdfium-render = "0.8"
# Cross-platform PTY for the interactive Claude session driver
# (`session::agent::interactive_pty`). Used to spawn `claude` as a
# child on a pseudo-terminal so its TUI renders into the user's
# terminal verbatim while the orchestrator gets a side channel to
# inject prompts.
portable-pty = "0.8"
# Cross-platform Ctrl-C / SIGINT / SIGTERM handler so the interactive
# PTY drivers can restore the user's terminal to cooked mode and
# remove the control-socket file before exiting. Without this, killing
# sim-flow with Ctrl-C leaves the terminal in raw mode and a stale
# socket file the next dashboard click trips on.
ctrlc = "3"
regex = "1"
# Markdown event-stream parser. Drives the spec.md parser
# (`session::spec_md::parser`) which walks H2-delimited sections and
# extracts typed tables / lists / prose subsections from each.
pulldown-cmark = { version = "0.12", default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
# Per-machine identifier persisted in the global DB's `meta` table.
# Generated as UUID v4 on first init and stored, so it's stable across
# sim-flow process restarts (per-row provenance on shared-team data).
uuid = { version = "1", features = ["v4"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Wire types for the `session::lsp` blocking client that backs the
# `api_*` discovery tools (rust-analyzer over LSP). We only consume
# the type definitions -- the JSON-RPC framing and transport are
# hand-rolled to keep the client blocking and tokio-free.
lsp-types = "0.97"
# Jinja2-compatible templating for the prompt loader (`prompts.rs`).
# Used to substitute placeholders like `{{output_intro}}` in each
# DM*-{work,critique}.md prompt at load time, so a single
# source-of-truth prompt covers both fence-mode and native-tool-call
# mode (the fragment loaded for `{{output_intro}}` differs per mode).
# Default-features off keeps the compile cost minimal -- we only
# need string templating.
minijinja = { version = "2", default-features = false, features = ["builtins", "serde"] }
termimad = "0.31"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Cross-platform advisory file locking for the `.sim-flow/state.lock`
# guard used to serialize concurrent state.toml mutations from
# multiple sim-flow processes (two terminals + a dashboard, e.g.).
# Wraps flock on Unix and LockFileEx on Windows.
fs2 = "0.4"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
# Embedding client (Chapter 5 of the spec/lance architecture). We use
# rig solely for its `openai`-provider HTTP wrapper around embedding
# endpoints; the rest of rig (agents, completions, vector stores,
# extractors, RAG pipelines) is explicitly NOT used. Version is pinned
# exactly (`=0.37.0`, not `^0.37`) per §5.8 because rig's README warns
# that future updates contain breaking changes; upgrades are explicit
# operations that include reviewing the rig changelog and re-running
# the embedder smoke tests.
rig = { version = "=0.37.0", package = "rig-core" }
# rig re-exports `http`'s `HeaderMap` / `HeaderValue` but not
# `HeaderName`; the embedder config supports custom auth header
# names (per Chapter 5 §5.6) and needs the full constructor surface.
# Pull `http` directly to construct dynamic header names without
# leaking the type through the rest of sim-flow.
http = "1"
# Required by rig's `EmbeddingModel` trait (returns boxed futures via
# `async-trait`). We use the same crate to express the sim-flow-side
# `EmbeddingClient` trait so the boundary is symmetric.
async-trait = "0.1"
# Current-thread tokio runtime used by `RetrievalService` (Chapter 5
# §5.7) to bridge sim-flow's synchronous orchestrator to rig's async
# HTTP. Async leakage is confined to the `embedder` module and its
# tokio-block_on shim.
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time"] }
# Raw-mode termios on the controlling terminal so user keystrokes
# pass through to the spawned PTY child unprocessed (no line
# buffering, no echo, Ctrl-C as 0x03 byte). Same API on macOS and
# Linux; Windows path uses `crossterm`'s internal console-mode
# bits via the same crate.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = { version = "0.28", default-features = false }

# Direct libc bindings on Unix for `tcsetattr` on the PTY master fd.
# We disable the slave's `ECHO`, `OPOST`, and `ONLCR` flags so the
# line discipline doesn't (a) echo our injected prompt back to the
# user's terminal and (b) double-translate `\n` into `\r\n` on the
# child's output. Done via libc rather than nix to avoid pulling in
# a heavier dependency for a few constants and one syscall.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
# HTTP mock server for the embedder unit tests. Spawns a local server
# on an ephemeral port and answers configured request matchers; we use
# it to exercise the rig openai-compat client against fixed payloads
# without touching a real provider.
wiremock = "0.6"
