[workspace]
resolver = "3"
members = [
    "term-core",
    "demo-alacritty",
    "demo-wezterm",
    "demo-rio",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
portable-pty = "0.8"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
