# Empty `[workspace]` table = "this project is its own workspace
# root." Without it, cargo walks the directory tree on every
# invocation, attaches this package to the nearest ancestor
# workspace it finds (e.g. the user's `sim-models` repo, which IS a
# workspace), and refuses to operate with `current package believes
# it's in a workspace when it's not`. The DM2d / DM3b / DM3c gates
# shell out to `cargo build` / `cargo test` / `cargo llvm-cov`, so a
# missing opt-out here would block every gate the moment the
# project lands inside a workspace-rooted parent dir.
[workspace]

[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "{{crate_name}}"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
foundation-framework = { path = "{{foundation_path}}/crates/framework" }

# sim-models library modules (uncomment as needed).
# soc               = { path = "{{library_path}}/soc" }
# memory-controller = { path = "{{library_path}}/memory-controller" }
# micron-lpddr5x    = { path = "{{library_path}}/micron-lpddr5x" }

[dev-dependencies]
