[package]
name = "demo-wezterm"
version.workspace = true
edition.workspace = true

[[bin]]
name = "demo-wezterm"
path = "src/main.rs"

[dependencies]
term-core = { path = "../term-core" }
# `wezterm-term` itself is git-only; this is the published Tattoy fork
# of the WezTerm VT engine, explicitly intended for embedded use.
tattoy-wezterm-term = "0.1.0-fork.5"
tattoy-wezterm-cell = "0.1.0-1"
tattoy-wezterm-surface = "0.1.0-fork.2"
log.workspace = true
