[package]
name = "term-core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
eframe.workspace = true
egui.workspace = true
portable-pty.workspace = true
parking_lot.workspace = true
log.workspace = true
env_logger.workspace = true
crossbeam-channel.workspace = true
